# projection_remesher

./: CMakeLists.txt  Camera.cpp  Camera.h  Geometry.h  MainWindow.cpp  MainWindow.h  Math.hpp  Meshes.hpp  Model.cpp  Model.h  ObjHandler.cpp  ObjHandler.h  README.md  Window.cpp  Window.h  main.cpp  mainWindow.ui
remesher/: projection_remesher.hpp
shaders/: main.frag  main.vert
